--- a/style.css
+++ b/style.css
@@ -196,9 +196,9 @@ footer {
 
 /* Definir variables de colores */
 :root {
-    --primary-color: #2a60b1; /* Azul principal */
-    --secondary-color: #2e72cc; /* Verde */
-    --background-color: #ebebeb;
+    --primary-color: #2D3142; /* Color Header */
+    --secondary-color: #2d3142c0; /* Hover Navbar */
+    --background-color: #EAE8FF;
     --text-color: #333;
     --header-font: 'Poppins', sans-serif;
 }
@@ -209,7 +209,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.5;
-    font-size: 16px; /* Tamaño base de la fuente */
+    font-size: 16px; /* Tamañ o base de la fuente */
 }
 
 /* Header */
@@ -227,7 +227,7 @@ header h1 {
 
 /* Navbar */
 nav {
-    background-color: #414141;
+    background-color: #424861;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -388,7 +388,7 @@ nav ul li a:hover {
 
 /* Footer */
 footer {
-    background-color: #414141;
+    background-color: #424861;
     color: white;
     padding: 1.5rem;
     text-align: center;
@@ -494,7 +494,7 @@ textarea {
 }
 
 .submit-button:hover {
-    background-color: #0056b3;
+    background-color: #2c3e50;
     transform: scale(1.02);
 }
 
@@ -502,4 +502,15 @@ textarea {
     .contact {
         width: 90%;
     }
+}
+
+.blur-img {
+    filter: blur(0.6px); /* Aplica desenfoque */
+    transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.blur-img:hover {
+    filter: blur(0); /* Quita el desenfoque al hacer hover */
+    transform: scale(1.05); /* Aumenta ligeramente el tamaño */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Añade sombra para resaltar */
 }
